Fix ru vault header overflow

--- a/src/app/inventory/dimStoreHeading.scss
+++ b/src/app/inventory/dimStoreHeading.scss
@@ -62,6 +62,7 @@ dim-store-heading {
     font-family: Roboto, 'Open Sans', sans-serif;
     flex: 1;
     text-shadow: 1px 1px 1px rgba(0,0,0,.5), 0px 0px 10px rgba(0,0,0,.5);
+    min-width: 0;
   }
 
   .top, .bottom {
@@ -94,6 +95,7 @@ dim-store-heading {
     text-transform: capitalize;
     flex: 1;
     text-overflow: ellipsis;
+    overflow: hidden;
   }
   .level {
     margin-right: 1px;
@@ -226,7 +228,7 @@ dim-store-heading {
 
 .lang-ru {
   .vault .class {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
